--- a/ref-implementation/argo-workflows/manifests/dev/ingress.yaml
+++ b/ref-implementation/argo-workflows/manifests/dev/ingress.yaml
@@ -19,7 +19,7 @@ spec:
                 name: argo-server
                 port:
                   name: web
-    - host: cnoe.localtest.me
+    - host: mymindpod.com
       http:
         paths:
           - path: /argo-workflows(/|$)(.*)
