--- a/ref-implementation/keycloak/manifests/ingress.yaml
+++ b/ref-implementation/keycloak/manifests/ingress.yaml
@@ -18,7 +18,7 @@ spec:
                 name: keycloak
                 port:
                   name: http
-    - host: cnoe.localtest.me
+    - host: mymindpod.com
       http:
         paths:
           - path: /keycloak
