--- a/ref-implementation/keycloak/manifests/install.yaml
+++ b/ref-implementation/keycloak/manifests/install.yaml
@@ -83,12 +83,12 @@ data:
     proxy=edge
     
     # hostname configuration
-    hostname=cnoe.localtest.me
+    hostname=mymindpod.com
     hostname-port=8443
     http-relative-path=keycloak
     
     # the admin url requires its own configuration to reflect correct url
-    hostname-admin=cnoe.localtest.me:8443
+    hostname-admin=mymindpod.com:8443
     
     hostname-debug=true
     
